# nbpipeline

./: .flake8  .gitignore  README.md  example.env  pyproject.toml
.github/workflows/: python-publish.yml
nbpipeline/: config.py  run.py
notebooks/: sample_stage_1.ipynb  sample_stage_2.ipynb
scripts/: release.sh
